fix: make email URLs configurable via `raccoon.baseUrl` property in templates and renderer
Signed-off-by: jaivalis <johnaivalis@gmail.com>